# movie-rating

./: README.md  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 2158bad7724c_initial.py
app/: logging.py  main.py
app/app/controllers/: movie_controller.py
app/app/services/: rating_service.py
app/controllers/: movie_controller.py
app/db/: session.py
app/exceptions/: custom_exceptions.py
app/models/: director.py  genre.py  movie.py  movie_genre.py  rating.py
app/repositories/: director_repository.py  genre_repository.py  movie_repository.py  rating_repository.py
app/schemas/: director.py  genre.py  movie.py  rating.py
app/services/: movie_service.py  rating_service.py
controllers/: movie_controller.py
repositories/: movie_repository.py
scripts/: seeddb.sql
services/: movie_service.py
